force-app/main/default/objects/Committee_Master__c/Committee_Master__c.object-meta.xml
<CustomObject>
    <label>Committee Master</label>
    <nameField>
        <displayFormat>CMS-{00000}</displayFormat>
        <label>Commitee Master Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Committee Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>