force-app/main/default/objects/Committee_Master__c/fields/Alternative_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Mobile_Number__c</fullName>
    <label>Alternative Mobile Number</label>
    <type>Phone</type>
</CustomField>