force-app/main/default/objects/Committee_Master__c/fields/Firebase_UID__c.field-meta.xml
<CustomField>
    <fullName>Firebase_UID__c</fullName>
    <label>Firebase UID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>